feature: add main entry

--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@lvce-editor/simple-browser-view-server",
   "version": "0.0.0-dev",
-  "main": "index.js",
+  "main": "src/index.js",
   "type": "module",
   "scripts": {
     "postinstall": "node src/postinstall.js",
