--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -13,6 +13,7 @@
   "description": "",
   "dependencies": {
     "@lvce-editor/main-process": "^3.1.0",
+    "@lvce-editor/preload": "^1.5.0",
     "@lvce-editor/server": "^0.52.1"
   }
 }
