--- a/packages/e2e/package.json
+++ b/packages/e2e/package.json
@@ -14,5 +14,8 @@
   "license": "MIT",
   "devDependencies": {
     "@lvce-editor/test-with-playwright": "^2.17.0"
+  },
+  "dependencies": {
+    "@playwright/test": "^1.57.0"
   }
 }
