--- a/packages/e2e/package.json
+++ b/packages/e2e/package.json
@@ -4,18 +4,18 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "e2e": "node ./node_modules/@lvce-editor/test-with-playwright/bin/test-with-playwright.js  --only-extension=. --test-path=.",
-    "e2e:headless": "node ./node_modules/@lvce-editor/test-with-playwright/bin/test-with-playwright.js  --only-extension=. --test-path=. --headless",
+    "e2e": "playwright test",
+    "e2e:headless": "playwright test --headed=false",
     "type-check": "tsc"
   },
   "type": "module",
   "keywords": [],
   "author": "",
   "license": "MIT",
-  "devDependencies": {
-    "@lvce-editor/test-with-playwright": "^2.17.0"
-  },
+  "devDependencies": {},
   "dependencies": {
-    "@playwright/test": "^1.57.0"
+    "@playwright/test": "^1.57.0",
+    "@lvce-editor/test-with-playwright": "^2.17.0",
+    "@types/node": "^25.0.3"
   }
 }
