--- a/packages/e2e/tsconfig.json
+++ b/packages/e2e/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "target": "esnext",
-    "lib": ["esnext", "WebWorker"],
+    "lib": ["esnext"],
     "checkJs": true,
     "module": "esnext",
     "types": ["node"],
